--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="Task/style.css" />
 
   <script type="module" src="index.js"></script>
 
@@ -30,7 +31,8 @@
     <div class="todo__filter">
       <label><input id="checkbox-undone" type="checkbox">&nbsp;Pouze nesplněné</label>
     </div>
-    <div class="todo__tasks">
+    <div class="todo__tasks"></div>
+    <!--
       <div class="task">
         <div class="task__body">
           <div class="task__name">Vyprat ponožky</div>
@@ -52,7 +54,8 @@
         </div>
         <div class="task__done">✓</div>
       </div>
-    </div>
+      -->
+
   </div>
 </body>
 
